examples/test/testpolicy10450.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10450
  namespace: namespace47
spec:
  podSelector:
    matchLabels:
      key48: value19
      key9: value21
      key25: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value14
      podSelector:
        matchLabels:
          key26: value48
          key46: value18
          key9: value25
